@@ -20,8 +20,7 @@
 RECURSIVE_TARGETS += \
 all-recursive install-data-recursive install-exec-recursive \
 installdirs-recursive install-recursive uninstall-recursive \
-?INSTALL-INFO?install-info-recursive uninstall-info-recursive \
-check-recursive installcheck-recursive info-recursive dvi-recursive
+check-recursive installcheck-recursive
 
 .PHONY: $(RECURSIVE_TARGETS)
 
