@@ -1,5 +1,10 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* subdirs.am: Don't define info related recursive targets.
+	* texinfos.am: Do.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* subdirs.am (RECURSIVE_TARGETS): New variable.
 	Use it.
 	* automake.in (&handle_subdirs): Output it.
